# prototype-zne

./: .coveragerc  .cz.toml  .flake8  .gitlint  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  DEPRECATION.md  FILEMAP.md  INSTALL.md  README.md  pyproject.toml  pytest.ini  tox.ini
.github/: .templatesyncignore  CODEOWNERS
.github/ISSUE_TEMPLATE/: bug.md  bug.yaml  bug_report.md  documentation.md  documentation.yaml  enhancement.yaml  enhancement_request.md  feature.md  feature.yaml
.github/workflows/: citation.yml  coverage.yml  lint.yml  release.yml  template-sync.yaml  test-development.yml  test-minimum.yml  test.yml  test_development.yml  test_minimum.yml
docs/: conf.py  index.rst  reference_guide.md
docs/_templates/autosummary/: class.rst  method.rst  module.rst
docs/apidocs/: zne.rst
docs/explanations/: index.rst
docs/explanations/01_noise_amplification_on_basis_gates/: 01_noise_amplification_on_basis_gates.ipynb
docs/how_tos/: index.rst
docs/how_tos/01_simulating_H2_ground_state/: 01_simulating_H2_ground_state.ipynb  data.json
docs/media/: base_estimator.drawio
docs/tutorials/: 0-estimator.ipynb  1-zne.ipynb  2-noise_amplification.ipynb  chsh.ipynb  index.rst  promo.ipynb  teaser.ipynb
test/: __init__.py  test_immutable_strategy.py  test_zne_strategy.py
test/extrapolation/: test_exponential_extrapolator.py  test_extrapolator.py  test_linear_extrapolator.py  test_polynomial_extrapolator.py
test/meta/: test_call.py  test_cls.py  test_init.py  test_job.py  test_run.py
test/noise_amplification/: __init__.py  test_cx_amplifier.py  test_noise_amplifier.py
test/noise_amplification/folding_amplifier/: conftest.py  test_folding_amplifier.py  test_global_folding_amplifier.py  test_local_folding_amplifier.py
test/noise_amplification/test_folding_amplifier/: conftest.py  test_folding_amplifier.py  test_global_folding_amplifier.py  test_local_folding_amplifier.py
test/utils/: test_classconstant.py  test_dict_library.py  test_docstrings.py  test_grouping.py  test_serialization.py  test_strategy.py  test_typing.py  test_unset.py  test_validation.py
tools/: extremal_dependency_versions.py  symlink_submodule.py  travis_before_script.bash
zne/: __init__.py  immutable_strategy.py  types.py  zne_strategy.py
zne/extrapolation/: __init__.py  exponential_extrapolator.py  extrapolator.py  linear_extrapolator.py  polynomial_extrapolator.py
zne/meta/: __init__.py  call.py  cls.py  init.py  job.py  run.py
zne/noise_amplification/: __init__.py  cx_amplifier.py  noise_amplifier.py
zne/qiskit/: __init__.py
zne/utils/: __init__.py  classconstant.py  dict_library.py  docstrings.py  grouping.py  serialization.py  standard_gates.py  strategy.py  typing.py  unset.py  validation.py
(+22 files in other folders)
